<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="please">Please enter your username</string>
    <string name="username">Username:</string>
    <string name="submit">Submit</string>
    <string name="password">Please enter a password</string>
    <string name="confirm">Please confirm your password</string>
</resources>
